# predifi

./: .env.local  .gitignore  .tool-versions  AGENTS.md  BATCH_WHITELIST_IMPLEMENTATION.md  BATCH_WHITELIST_PR_SUMMARY.md  BATCH_WHITELIST_QUICK_REFERENCE.md  CHECKLIST_CLS_IMPLEMENTATION.md  CLS_IMPROVEMENTS.md  COMMIT_MESSAGE.txt  CONTRIBUTING_BACKEND.md  Deployment.md  FINAL_SUMMARY_CLS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CLS.md  MONITORING.md  Makefile  Natspec.md  PR-d.md  PR_DESCRIPTION.md  PULL_REQUEST_957.md  README.md  README_CLS_IMPLEMENTATION.md  SECURITY_FIX_CANCEL_POOL.md  Scarb.toml  contributor.md  fix_tests.py  package-lock.json  rustfmt.toml  snfoundry.toml  vercel.json
.devcontainer/: install-tools.sh
.github/: PULL_REQUEST_TEMPLATE.md
AETHER_SOLUTIONS/: issue_558.md
backend/: .env.backup  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_TESTING.md  docker-compose.test.yml  docker-compose.yml  test_mock_server.rs
backend/.github/workflows/: ci.yml
backend/.sqlx/: query-0c7f1fe4f35ebd111df549d9f2072aa22639d1bbf95688bfec89ba6a803e2205.json  query-756e3c01fece37a1073b4f3cfdd35b0991728a92c6ce206c8044bb821647c215.json  query-9ca6d770b3e2984246b504870e3930847970e5c34c58527d170f0be1740a7fe0.json  query-b9e93849b5fceff38b055f04d6ab6b3b4b639785fb5f80946e775d17cde4450a.json  query-ef15a50a220e4a3b7ddf00ee20530c86fe8cbb35d137c6ab65ba923679fbc0be.json
backend/migrations/: 001_create_referrals.sql  002_create_pools.sql  003_create_predictions.sql  004_enhance_schema_precision.sql  005_add_index_pools_created_at.sql  006_optimize_user_address_indexes.sql  007_optimize_pool_id_indexes.sql  008_referrer_stats.sql  009_add_predictions_indexes.sql  009_create_user_statistics.sql  20250724150300_init.sql  20250730120511_create_validators.sql
backend/scripts/: run_tests.sh  validate-local.sh
backend/src/: config.rs  constants.rs  db.rs  db_integration_tests.rs  error.rs  errors.rs  jwt.rs  lib.rs  main.rs  metrics.rs  mock_rpc_helpers.rs  openapi.rs  price_cache.rs  rate_limit.rs  redis_cache.rs  redis_integration_tests.rs  referrals.rs  request_logger.rs  response.rs  seed.rs  server.rs  session.rs  shutdown.rs  telemetry.rs  test_support.rs  tests.rs  tracing_context.rs  validated_types.rs  ws.rs
backend/src/config/: db_config.rs  mod.rs  tracing.rs
backend/src/controllers/: market_controller.rs  mod.rs  pool_controller.rs  validator_controller.rs
backend/src/db/: database.rs
backend/src/middleware/: mod.rs  request_id.rs
backend/src/models/: market.rs  mod.rs  pool.rs  validator.rs
backend/src/routes/: market.rs  mod.rs  pool_route.rs  v1.rs  validator_route.rs
backend/src/test_support/: mock_rpc.rs
backend/src/worker/: mod.rs  stellar_listener.rs  sync.rs
backend/test/: test_sqlx_integration.rs
backend/tests/: migration_roundtrip.rs  test_health_endpoints.rs  test_market_api.rs  test_market_creation.rs  test_pool.rs  test_pool_api.rs  test_request_id.rs  test_simple_query.rs  test_sqlx_integration.rs  test_validator_api.rs
contract/: .gitignore  BENCHMARKS.md  CATEGORY_QUICK_REFERENCE.md  CATEGORY_REFACTOR.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION_GUIDE.md  README.md  REFACTOR_SUMMARY.md  Scarb.toml  TODO.md  build.sh  constants  rustfmt.toml
contract/.cargo/: config.toml
contract/contracts/access-control/: Cargo.toml
contract/contracts/access-control/src/: lib.rs  test.rs
contract/contracts/access-control/test_snapshots/test/: test_admin_transfer.1.json  test_get_pools.1.json  test_initialization.1.json  test_role_assignment.1.json  test_role_revocation.1.json  test_role_transfer.1.json  test_unauthorized_assignment.1.json
contract/contracts/hello-world/src/: lib.rs  test.rs  test_pool.rs
contract/contracts/hello-world/test_snapshots/test/: test_calculate_fee.1.json  test_create_pool_with_fee.1.json  test_different_fee_percentages.1.json  test_distribute_winnings_with_fee.1.json  test_fee_precision.1.json  test_get_pool.1.json  test_initialize.1.json  test_initialize_with_excessive_fee.1.json  test_multiple_fee_collections.1.json  test_resolve_pool_with_fee.1.json  test_update_protocol_fee.1.json  test_update_protocol_fee_exceeds_max.1.json  test_update_treasury.1.json
contract/contracts/hello-world/test_snapshots/test_pool/: test_create_pool_success.1.json  test_submit_prediction_after_deadline.1.json  test_submit_prediction_success.1.json
contract/contracts/predifi-contract/: Cargo.toml  test_output.txt
contract/contracts/predifi-contract/src/: benchmark_test.rs  constants.rs  edge_case_tests.rs  events.rs  fee_tiers_test.rs  integration_test.rs  lib.rs  payout_proptests.rs  price_feed.rs  price_feed_simple.rs  price_feed_tests.rs  property_tests.rs  safe_math.rs  safe_math_examples.rs  storage_test.rs  stress_test.rs  test.rs  test_utils.rs
contract/contracts/predifi-contract/test_snapshots/test/: test_claim_unresolved.1.json  test_claim_winnings.1.json  test_double_claim.1.json  test_resolution_window.1.json
contract/contracts/predifi-contract/tests/: price_feed_integration_test.rs  version_string_test.rs
contract/contracts/predifi-errors/: Cargo.toml  README.md
contract/contracts/predifi-errors/src/: errors.rs  lib.rs  native_errors.rs
contract/scripts/: README.md  deploy.sh  example_interaction.sh  install-scarb.sh  query_pool_status.sh  simulate_predictions.sh  test_all.sh  validate_changelog.py  wasm_size_check.sh
contract/scripts/tests/: test_deploy_optimization.sh  test_query_pool_status.sh  test_wasm_opt.sh  test_wasm_size_check.sh
contract/src/: PredifiProxy.cairo  Validator.cairo  errors.rs  lib.cairo  lib.rs  predifi.cairo
contract/src/base/: errors.cairo  types.cairo
contract/src/components/: pool_reading.cairo
contract/src/interfaces/: ierc721.cairo  ipredifi.cairo
contract/src/presets/: ERC721.cairo  NonTransferableNFT.cairo
contract/tests/: test_contract.cairo  test_fee_collection.cairo  test_predifi.cairo  test_predifi_token.cairo
docs/: ADVANCED_HEALTH_CHECKS.md  contract-reference.md  cors-middleware.md  oracles.md  (+5 more)
(+219 files in other folders)
