[workspace]

[package]
name = "predifi-backend"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP backend for the PrediFi platform"
readme = "README.md"

[[bin]]
name = "predifi-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "derive",
    "migrate",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prometheus = "0.13"
sentry = "0.33"
sentry-tracing = "0.33"
# OpenAPI / Swagger documentation (#563)
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower_governor = { version = "0.5.0", features = ["axum"] }
# Redis caching for hot data (#714)
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sysinfo = "0.29"


[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
