[workspace]

[package]
name = "predifi-backend"
version = "0.1.0"
edition = "2021"
description = "Axum HTTP backend for the PrediFi platform"
readme = "README.md"

[[bin]]
name = "predifi-backend"
path = "src/main.rs"

[[bin]]
name = "predifi-seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.25"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "macros",
    "derive",
    "migrate",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prometheus = "0.13"
# OpenAPI / Swagger documentation
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
# Redis caching for hot data
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
sysinfo = "0.37"
uuid = { version = "1", features = ["v4", "serde"] }
predifi-errors = { path = "../contract/contracts/predifi-errors", features = ["std"] }
jsonwebtoken = "9"
governor = "0.8"

[features]
integration-tests = []

[[test]]
name = "migration_roundtrip"
path = "tests/migration_roundtrip.rs"
required-features = ["integration-tests"]

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
