[workspace]
resolver = "2"
members = [
  "contracts/*",
  "contracts/predifi-contract",
]

[package]
name = "predifi-errors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[workspace.dependencies]
soroban-sdk = "23"
predifi-errors = { path = "." }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
