[package]
name    = "predifi-contract"
version = "0.0.0"
edition = "2021"
publish = false

# cdylib produces the WASM binary; lib allows Rust tests to import the contract.
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk    = { workspace = true }
predifi-errors = { workspace = true }
access-control = { workspace = true }
# Pyth Network for price feeds
pyth-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
