[package]
name    = "predifi-contract"
version = "0.0.0"
edition = "2021"
authors = ["PrediFi Team <team@predifi.io>"]
description = "PrediFi - Decentralized Outcome Prediction Protocol built on Stellar/Soroban"
homepage = "https://predifi.io"
repository = "https://github.com/Web3Novalabs/predifi"
license = "MIT"
publish = false

# cdylib produces the WASM binary; lib allows Rust tests to import the contract.
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk    = { workspace = true }
predifi-errors = { workspace = true }
access-control = { workspace = true }
# Pyth Network for price feeds
pyth-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest    = { workspace = true }
